Step 5: Styled buttons and logo

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="header-right">
         <button>➕</button>
         <button>🔔</button>
-        <img src="https://placeholder.ru/32" alt="Avatar" class="avatar">
+        <img src="https://avatars.mds.yandex.net/i?id=49aba859340ed55785fb861c6f36f6c1_l-12489030-images-thumbs&n=13" alt="Avatar" class="avatar">
     </div>
 
     </header>
