Step 7: Added sidebar HTML

--- a/index.html
+++ b/index.html
@@ -28,6 +28,39 @@
     </div>
 
     </header>
+    <div class="content">
+<aside class="sidebar">
+<nav>
+<a href="#" class="sidebar-link active">
+<span class="icon">🏠</span>
+<span>Главная</span>
+</a>
+<a href="#" class="sidebar-link">
+<span class="icon">🔥</span>
+<span>В тренде</span>
+</a>
+<a href="#" class="sidebar-link">
+<span class="icon">🎬</span>
+<span>Подписки</span>
+</a>
+<hr>
+<a href="#" class="sidebar-link">
+<span class="icon">📚</span>
+<span>Библиотека</span>
+</a>
+<a href="#" class="sidebar-link">
+<span class="icon">📜</span>
+<span>История</span>
+</a>
+<a href="#" class="sidebar-link">
+<span class="icon">👍</span>
+<span>Понравилось</span>
+</a>
+</nav>
+</aside>
+<main class="main">
+<h2>Здесь будет видео</h2>
+<div>
 
     
 
